--- a/config.example.json
+++ b/config.example.json
@@ -9,7 +9,7 @@
 	"wait_time": 30, # sleep time
 	"accounts": [
 		{
-			"phone": "+6285282xxxxx",
+			"phone": "++6285282768786",
 			"api_id": 26042825,
 			"api_hash": "2ec0cd4c66590cc131e1f13290023204"
 		}
